# StrBinderProject

./: CMakeLists.txt  HelloClient.c  HelloInterface.h  HelloServer.c  IStrService.h  README.md  StrClient.c  StrService.c  binder.c  binder.h
